--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,7 +235,17 @@
     "    db.session.delete(course)\n",
     "    db.session.commit()\n",
     "    \n",
-    "    return redirect(url_for('admin'))\n"
+    "    return redirect(url_for('admin'))\n",
+    "\n",
+    "\n",
+    "@app.route('/delete_student/<int:student_id>', methods=['GET','POST'])\n",
+    "def delete_student(student_id):\n",
+    "    \n",
+    "    student = Student.query.get_or_404(student_id)\n",
+    "    db.session.delete(student)\n",
+    "    db.session.commit()\n",
+    "    \n",
+    "    return redirect(url_for('admin'))"
    ]
   },
   {
@@ -247,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -326,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -344,7 +354,7 @@
       "WARNING: This is a development server. Do not use it in a production deployment. Use a production WSGI server instead.\n",
       " * Running on all addresses (0.0.0.0)\n",
       " * Running on http://127.0.0.1:5000\n",
-      " * Running on http://192.168.100.102:5000\n",
+      " * Running on http://192.168.0.106:5000\n",
       "Press CTRL+C to quit\n"
      ]
     },
@@ -352,18 +362,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "192.168.100.102 - - [14/Mar/2024 23:17:46] \"GET / HTTP/1.1\" 200 -\n",
-      "192.168.100.102 - - [14/Mar/2024 23:17:46] \"GET /static/css/styles.css HTTP/1.1\" 304 -\n",
-      "192.168.100.102 - - [14/Mar/2024 23:17:46] \"GET /static/js/background.js HTTP/1.1\" 304 -\n",
-      "192.168.100.102 - - [14/Mar/2024 23:17:46] \"GET /static/assets/studentStand.png HTTP/1.1\" 304 -\n",
-      "192.168.100.102 - - [14/Mar/2024 23:17:46] \"GET /static/assets/map.png HTTP/1.1\" 304 -\n",
-      "192.168.100.102 - - [14/Mar/2024 23:17:47] \"GET /courses HTTP/1.1\" 200 -\n",
-      "192.168.100.102 - - [14/Mar/2024 23:17:47] \"GET /static/css/styles.css HTTP/1.1\" 304 -\n",
-      "192.168.100.102 - - [14/Mar/2024 23:17:47] \"GET /static/js/background.js HTTP/1.1\" 304 -\n",
-      "192.168.100.102 - - [14/Mar/2024 23:17:47] \"GET /static/js/jQuery.js HTTP/1.1\" 304 -\n",
-      "192.168.100.102 - - [14/Mar/2024 23:17:47] \"GET /static/assets/map.png HTTP/1.1\" 304 -\n",
-      "192.168.100.102 - - [14/Mar/2024 23:17:47] \"GET /static/assets/man.png HTTP/1.1\" 304 -\n",
-      "192.168.100.102 - - [14/Mar/2024 23:17:49] \"GET /static/css/styles.css HTTP/1.1\" 304 -\n"
+      "192.168.0.106 - - [15/Mar/2024 01:23:09] \"GET / HTTP/1.1\" 200 -\n",
+      "192.168.0.106 - - [15/Mar/2024 01:23:09] \"GET /static/js/background.js HTTP/1.1\" 304 -\n",
+      "192.168.0.106 - - [15/Mar/2024 01:23:09] \"GET /static/css/styles.css HTTP/1.1\" 304 -\n",
+      "192.168.0.106 - - [15/Mar/2024 01:23:09] \"GET /static/assets/studentStand.png HTTP/1.1\" 304 -\n",
+      "192.168.0.106 - - [15/Mar/2024 01:23:09] \"GET /static/assets/map.png HTTP/1.1\" 304 -\n"
      ]
     }
    ],
