login for admin added

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,20 +129,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
     "\n",
+    "@app.route('/adminLogin',methods=['POST'])\n",
+    "def adminLogin():\n",
+    "\n",
+    "    name = request.form['name']\n",
+    "    key = request.form['key']\n",
+    "    if(name + key == 'adminpass'):\n",
+    "        \n",
+    "        students = Student.query.all()\n",
+    "        teachers = Teacher.query.all()\n",
+    "        courses = Course.query.all()\n",
+    "\n",
+    "        return render_template('admin.html', teachers=teachers, courses=courses , students=students)\n",
+    "    else:\n",
+    "        return \"Sign Error\"\n",
+    "\n",
     "@app.route('/admin')\n",
     "def admin():\n",
     "\n",
-    "    students = Student.query.all()\n",
-    "    teachers = Teacher.query.all()\n",
-    "    courses = Course.query.all()\n",
+    "    return render_template('adminLogin.html')\n",
     "\n",
-    "    return render_template('admin.html', teachers=teachers, courses=courses , students=students)\n",
+    "\n",
     "\n",
     "@app.route('/submit_teacher', methods=['POST'])\n",
     "def submit_teacher():\n",
@@ -213,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,7 +278,6 @@
     "def courses():\n",
     "\n",
     "    courses = Course.query.all()\n",
-    "    \n",
     "\n",
     "    return render_template('courses.html',courses=courses)\n",
     "\n",
@@ -336,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -354,19 +366,25 @@
       "WARNING: This is a development server. Do not use it in a production deployment. Use a production WSGI server instead.\n",
       " * Running on all addresses (0.0.0.0)\n",
       " * Running on http://127.0.0.1:5000\n",
-      " * Running on http://192.168.0.106:5000\n",
-      "Press CTRL+C to quit\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "192.168.0.106 - - [15/Mar/2024 01:23:09] \"GET / HTTP/1.1\" 200 -\n",
-      "192.168.0.106 - - [15/Mar/2024 01:23:09] \"GET /static/js/background.js HTTP/1.1\" 304 -\n",
-      "192.168.0.106 - - [15/Mar/2024 01:23:09] \"GET /static/css/styles.css HTTP/1.1\" 304 -\n",
-      "192.168.0.106 - - [15/Mar/2024 01:23:09] \"GET /static/assets/studentStand.png HTTP/1.1\" 304 -\n",
-      "192.168.0.106 - - [15/Mar/2024 01:23:09] \"GET /static/assets/map.png HTTP/1.1\" 304 -\n"
+      " * Running on http://192.168.0.102:5000\n",
+      "Press CTRL+C to quit\n",
+      "192.168.0.102 - - [18/Mar/2024 18:01:43] \"GET / HTTP/1.1\" 200 -\n",
+      "192.168.0.102 - - [18/Mar/2024 18:01:43] \"GET /static/js/background.js HTTP/1.1\" 304 -\n",
+      "192.168.0.102 - - [18/Mar/2024 18:01:43] \"GET /static/assets/studentStand.png HTTP/1.1\" 304 -\n",
+      "192.168.0.102 - - [18/Mar/2024 18:01:43] \"GET /static/css/styles.css HTTP/1.1\" 200 -\n",
+      "192.168.0.102 - - [18/Mar/2024 18:01:43] \"GET /static/assets/map.png HTTP/1.1\" 304 -\n",
+      "192.168.0.102 - - [18/Mar/2024 18:01:48] \"GET /admin HTTP/1.1\" 200 -\n",
+      "192.168.0.102 - - [18/Mar/2024 18:01:48] \"GET /static/css/styles.css HTTP/1.1\" 304 -\n",
+      "192.168.0.102 - - [18/Mar/2024 18:01:49] \"GET /admin HTTP/1.1\" 200 -\n",
+      "192.168.0.102 - - [18/Mar/2024 18:01:49] \"GET /static/css/styles.css HTTP/1.1\" 304 -\n",
+      "192.168.0.102 - - [18/Mar/2024 18:02:05] \"GET /admin HTTP/1.1\" 200 -\n",
+      "192.168.0.102 - - [18/Mar/2024 18:02:05] \"GET /static/css/styles.css HTTP/1.1\" 304 -\n",
+      "192.168.0.102 - - [18/Mar/2024 18:02:07] \"GET /admin HTTP/1.1\" 200 -\n",
+      "192.168.0.102 - - [18/Mar/2024 18:02:07] \"GET /static/css/styles.css HTTP/1.1\" 200 -\n",
+      "192.168.0.102 - - [18/Mar/2024 18:02:13] \"GET /admin HTTP/1.1\" 200 -\n",
+      "192.168.0.102 - - [18/Mar/2024 18:02:13] \"GET /static/css/styles.css HTTP/1.1\" 200 -\n",
+      "192.168.0.102 - - [18/Mar/2024 18:02:29] \"POST /adminCheck HTTP/1.1\" 200 -\n",
+      "192.168.0.102 - - [18/Mar/2024 18:02:29] \"GET /static/css/styles.css HTTP/1.1\" 304 -\n"
      ]
     }
    ],
